fix movie container size on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@
 
 html {
   font-size: 62.5%;
+  font-smooth: antialiased;
+  -webkit-font-smoothing: antialiased;
 }
 :root {
   /* Fonts */
